Fullscreen deadlock in X video output
p_vout->p_sys->lock mutex is locked twice when always on top is enabled, when switching fullscreen
[00000341] x11 video output error: thread 2960255920: mutex_lock failed at xcommon.c:2410 (35:Resource deadlock avoided)
[00000341] x11 video output error: thread 2960255920: mutex_unlock failed at xcommon.c:951 (1:Operation not permitted)
[00000341] main video output error: caught in a callback deadlock?
See http://forum.videolan.org/viewtopic.php?t=25866&highlight=
and gentoo bug: http://bugs.gentoo.org/show_bug.cgi?id=151498